fix grid visible

--- a/src/Pages/Catalog/catalog.module.scss
+++ b/src/Pages/Catalog/catalog.module.scss
@@ -60,28 +60,29 @@
 
 .catalog {
   display: grid;
-  grid-template-columns: repeat(4, $card-width);
+  $card: 272px;
+  grid-template-columns: repeat(4, $card);
   padding: 24px;
   margin: 0 auto;
   max-width: 1200px;
   gap: 16px;
 
   @media (max-width: 1199px) {
-    $card-width: 229px;
+    $card: 229px;
     justify-content: center;
-    grid-template-columns: repeat(3, $card-width);
+    grid-template-columns: repeat(3, $card);
   }
 
   @media (max-width: 767px) {
-    $card-width: 288px;
+    $card: 288px;
     justify-content: center;
-    grid-template-columns: repeat(2, $card-width);
+    grid-template-columns: repeat(2, $card);
   }
 
   @media (max-width: 639px) {
-    $card-width: 288px;
+    $card: 288px;
     justify-content: center;
-    grid-template-columns: repeat(1, $card-width);
+    grid-template-columns: repeat(1, $card);
   }
 }
 
